[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EALogger"
version = "0.1.0"
description = "Enhanced Async Logging for FastAPI Projects"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Hasan Masud", email = "hasanmasudnet@example.com"}
]
keywords = ["logging", "json", "fastapi", "async", "performance", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]

dependencies = [
    # Core dependencies - minimal for basic functionality
]

[project.optional-dependencies]
fast = ["orjson>=3.11.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "ruff>=0.4.0",
]
all = ["orjson>=3.11.0", "pytest>=8.0.0", "pytest-cov>=5.0.0", "black>=24.0.0", "mypy>=1.8.0", "ruff>=0.4.0"]

[project.urls]
Homepage = "https://github.com/hasanmasudnet/EALogger"
Documentation = "https://github.com/hasanmasudnet/EALogger#readme"
Repository = "https://github.com/hasanmasudnet/EALogger"
Issues = "https://github.com/hasanmasudnet/EALogger/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=EALogger",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--strict-markers",
]

